--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class=title1>Confused where to get the right informtation about covid 19?</h1>
         </div>
         <div class="div2">
-                <h3 class="title2"><img src="images/Virus.png" >
+                <h3 class="title2"><img src="Virus.png" >
                 "Dont worry,<br> we got you!"</h3>
                
 
@@ -32,8 +32,8 @@
             <h1>Tips</h1>
             
             <ul> 
-                <li><img src=images/mask.png> Wear mask</li>
-                <li><img src=images/wash.png> hands</li>
+                <li><img src=mask.png> Wear mask</li>
+                <li><img src=wash.png> hands</li>
             </ul>
         </div>
 <section class="symptoms">
